[package]
name = "rust-tracervis"
version = "0.1.0"
authors = ["Quang Luong <quangio@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9.1"
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.20", features = ["full"] }
serde_json = "1.0.52"
serde = { version = "1.0.106", features = ["derive"] }
futures = "0.3.4"
termion = "1.5.5"
